Pipeline page does not allowed deletion of transacted order now; increased ManualLogger size to prevent submit button from overflowing

--- a/src/components/styles/ManualLogger.css
+++ b/src/components/styles/ManualLogger.css
@@ -1,5 +1,5 @@
 .manual-logger{
-  height: 285px;
+  height: 305px;
   border: 2px solid black;
   border-radius:5px;
   padding-left: 2px;
